<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Glance Dictionary</string>
    <string name="settings_icon">Settings</string>
    <string name="footer_link_text">See more at Restart Abroad</string>
    <string name="add_icon">+</string>
    <string name="widget_empty_text">Tap + to add your first word</string>
    <plurals name="word_count_format">
        <item quantity="one">%1$d Word</item>
        <item quantity="other">%1$d Words</item>
    </plurals>
    <string name="settings_display_section">Display</string>
    <string name="settings_font_size">Font Size</string>
    <string name="settings_font_size_sub">Adjust text readability</string>
    <string name="settings_category_font_size">Category Font Size</string>
    <string name="settings_category_font_size_sub">Size of category header labels</string>
    <string name="settings_columns">Columns</string>
    <string name="settings_columns_sub">Grid layout density</string>
    <string name="settings_sort_by_length">Sort Words by Length</string>
    <string name="settings_sort_by_length_sub">Reorders words within each category to reduce wasted row space</string>
    <string name="settings_show_romanization">Show Pronunciation</string>
    <string name="settings_show_romanization_sub">Displays pinyin, romaji and other Latin readings beneath words</string>
    <string name="toggle_on">ON</string>
    <string name="toggle_off">OFF</string>
    <string name="font_size_format">%1$dsp</string>
    <string name="title_welcome_widget">Create your widget</string>
    <string name="body_welcome_widget">Glance Dictionary only works through the home screen widget. Add it to your home screen to start using the app.</string>
    <string name="action_create_widget">Create widget</string>
    <string name="body_widget_unsupported">Your launcher does not support creating widgets from this screen. Add the widget from the home screen instead.</string>

    <string name="title_add_words">Add Words</string>
    <string name="title_edit_word">Edit Word</string>
    <string name="title_widget_settings">Widget Settings</string>

    <string name="label_category">CATEGORY</string>
    <string name="label_word_pair">WORD PAIR</string>
    <string name="label_bulk_upload">BULK UPLOAD</string>
    <string name="label_your_categories">YOUR CATEGORIES</string>
    <string name="label_active">ACTIVE</string>

    <string name="hint_native_word">Native word</string>
    <string name="hint_translated_word">Translated word</string>
    <string name="hint_romanization">Pronunciation (auto-filled)</string>
    <string name="hint_bulk_upload">word, translation\nword, translation</string>
    <string name="hint_new_category_name">New category name…</string>

    <string name="tab_words">Words</string>
    <string name="tab_categories">Categories</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_create">Create</string>
    <string name="clipboard_label_target_word">Target word</string>
    <string name="toast_copied_target_word">Copied target word</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_url">https://joinrestartabroad.com/tools/glance-dictionary/privacy</string>

    <string name="content_description_close">Close</string>
    <string name="content_description_reorder">Reorder</string>
    <string name="placeholder_category_name">Category Name</string>
    <string name="placeholder_word_count">0 Words</string>
    <string name="placeholder_section_title">Section Title</string>
    <string name="placeholder_label">Label</string>
    <string name="placeholder_sublabel">Sublabel</string>
    <string name="placeholder_language">English</string>
    <string name="action_decrement">-</string>
    <string name="placeholder_control_value">2</string>

    <string name="settings_translation_section">Translation</string>
    <string name="settings_my_language">My language</string>
    <string name="settings_my_language_sub">The language you enter words in</string>
    <string name="settings_translate_to">Translate to</string>
    <string name="settings_translate_to_sub">The language to translate into</string>
    <string name="hint_tap_to_select">Tap to select</string>
    <string name="dialog_applying_language">Applying language to default words…</string>
    <string name="dialog_download_failed_title">Download failed</string>
    <string name="dialog_download_failed_message">An internet connection is required to download the language model.</string>
    <string name="dialog_language_unsupported_title">Language not supported</string>
    <string name="dialog_language_unsupported_message">Translation isn\'t available for this language. The default words were left unchanged; new words you add will still use it.</string>
    <string name="toast_defaults_updated">Default words updated</string>
    <string name="action_translate">Translate</string>
    <string name="hint_set_target_language">Set a target language in Settings to enable translation</string>
    <string name="toast_translation_failed">Translation failed</string>

    <string name="tab_general">General</string>
    <string name="tab_language">Language</string>
    <string name="settings_downloaded_section">Downloaded languages</string>
    <string name="settings_downloaded_empty">No languages downloaded yet. Choose a translation language to download one.</string>
    <string name="dialog_delete_model_title">Remove %1$s?</string>
    <string name="dialog_delete_model_message">This frees up storage on your device. You\'ll need to download it again to translate with this language.</string>
    <string name="toast_model_removed">Language removed</string>
    <string name="toast_model_remove_failed">Could not remove language</string>
    <string name="content_description_delete_language">Remove downloaded language</string>
</resources>
